// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createLocalFileJob creates a CREATE_JOB action 1`] = `
Object {
  "payload": Object {
    "job": Object {
      "createdAt": "[REDACTED]",
      "id": "[REDACTED]",
      "name": "[REDACTED]",
      "quantity": 1,
    },
    "jobFiles": "[REDACTED]",
  },
  "type": "tegh/jobQueue/CREATE_JOB",
}
`;

exports[`createLocalFileJob creates a CREATE_JOB action 2`] = `
Object {
  "filePath": "[REDACTED]",
  "id": "[REDACTED]",
  "isTmpFile": false,
  "jobID": "[REDACTED]",
  "name": "[REDACTED]",
  "quantity": 1,
}
`;

exports[`createLocalFileJob creates a CREATE_JOB action 3`] = `""`;
